--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "happy-birthday-orly",
+	"name": "happy-birthday-ya",
 	"version": "1.0.0",
 	"description": "Simple HTML5 game created for the birthday of my beloved girlfriend Orly.",
 	"author": "alexeychikk",
