--- a/src/pwa/manifest.json
+++ b/src/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Happy Birthday Orly",
-	"name": "Happy Birthday Orly",
+	"short_name": "Happy Birthday natasya",
+	"name": "Happy Birthday natasya",
 	"icons": [
 		{
 			"src": "./assets/icons/icons-192.png",
